Fix spacing in uni section

--- a/src/components/Experience.scss
+++ b/src/components/Experience.scss
@@ -5,4 +5,8 @@
     hr {
         margin-left: 0;
     }
+
+    .uni li {
+        margin-bottom: 12px;
+    }
 }
